OD-319 Updates query string param for eff_rating
Changes the expected param to efficiency_rating
updates the swagger doc with the new param
